bk_ida/gccida/c3/dbxout_symbol
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2309:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2313:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2321:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2326:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2425:20: error: expected expression
v27 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/dbxout.c:2425:9: error: use of undeclared identifier 'tree_node'
v27 = ( tree_node *)*( &global_trees + 27); 
        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dbxout_symbol/src/obj/dbxout.o] Error 1
